src/test/deca/syntax/valid/resultats/test15_return-lex.res
'{': [@0,235:235='{',<36>,14:0]
'return': [@1,238:243='return',<22>,15:1]
INT: [@2,245:246='12',<1>,15:8]
';': [@3,247:247=';',<39>,15:10]
'return': [@4,250:255='return',<22>,16:1]
STRING: [@5,257:264='"retour"',<47>,16:8]
';': [@6,265:265=';',<39>,16:16]
'return': [@7,268:273='return',<22>,17:1]
FLOAT: [@8,275:279='12.0F',<46>,17:8]
';': [@9,280:280=';',<39>,17:13]
'}': [@10,282:282='}',<37>,18:0]
