src/test/deca/syntax/invalid/resultats/test17_lvalue-lex.res
'{': [@0,460:460='{',<36>,18:0]
INT: [@1,463:463='3',<1>,19:1]
'=': [@2,464:464='=',<29>,19:2]
INT: [@3,465:465='4',<1>,19:3]
';': [@4,466:466=';',<39>,19:4]
'}': [@5,468:468='}',<37>,20:0]
